--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>project with flex</title>
-    <link rel="stylesheet" href="assets/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body>
     <header class="header-area">
@@ -29,7 +30,7 @@
     <section class="banner-area">
       <div class="container">
         <div class="banner">
-          <img src="assets/img/bannar.jpg" alt="">
+          <img src="assets/img/bannar.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -39,23 +40,40 @@
       <div class="container">
         <div class="about-title">
           <h2>welcome to our website</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolor quae culpa repudiandae ipsa facilis ab laborum, sequi quas impedit, animi obcaecati eligendi! Eius qui repudiandae praesentium quas, accusamus veniam.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            dolor quae culpa repudiandae ipsa facilis ab laborum, sequi quas
+            impedit, animi obcaecati eligendi! Eius qui repudiandae praesentium
+            quas, accusamus veniam.
+          </p>
         </div>
         <div class="about">
           <div class="single-about">
             <i class="fa-solid fa-car"></i>
             <h2>our mission</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ex, vitae ipsum labore delectus error! Ipsum soluta impedit aperiam ut.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates ex, vitae ipsum labore delectus error! Ipsum soluta
+              impedit aperiam ut.
+            </p>
           </div>
           <div class="single-about">
             <i class="fa-solid fa-tv"></i>
             <h2>our vission</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ex, vitae ipsum labore delectus error! Ipsum soluta impedit aperiam ut.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates ex, vitae ipsum labore delectus error! Ipsum soluta
+              impedit aperiam ut.
+            </p>
           </div>
           <div class="single-about">
             <i class="fa-solid fa-helicopter"></i>
             <h2>our History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ex, vitae ipsum labore delectus error! Ipsum soluta impedit aperiam ut.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates ex, vitae ipsum labore delectus error! Ipsum soluta
+              impedit aperiam ut.
+            </p>
           </div>
         </div>
       </div>
@@ -66,33 +84,131 @@
       <div class="container">
         <div class="title">
           <h2>Services</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore architecto perferendis necessitatibus asperiores ipsam. Quas possimus culpa fugit illum veritatis consequuntur delectus, odio quisquam soluta perferendis tempore ipsum libero vel.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+            architecto perferendis necessitatibus asperiores ipsam. Quas
+            possimus culpa fugit illum veritatis consequuntur delectus, odio
+            quisquam soluta perferendis tempore ipsum libero vel.
+          </p>
         </div>
         <div class="service">
           <div class="single-service">
             <h2>service title</h2>
-            <img src="assets/img/service1.jpg" alt="service">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores aspernatur ea maxime sint incidunt totam tenetur excepturi ullam saepe temporibus?</p>
+            <img src="assets/img/service1.jpg" alt="service" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
+              aspernatur ea maxime sint incidunt totam tenetur excepturi ullam
+              saepe temporibus?
+            </p>
             <a href="">read more</a>
-
           </div>
           <div class="single-service">
             <h2>service title</h2>
-            <img src="assets/img/service2.jpg" alt="service">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores aspernatur ea maxime sint incidunt totam tenetur excepturi ullam saepe temporibus?</p>
+            <img src="assets/img/service2.jpg" alt="service" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
+              aspernatur ea maxime sint incidunt totam tenetur excepturi ullam
+              saepe temporibus?
+            </p>
             <a href="">read more</a>
-
           </div>
           <div class="single-service">
             <h2>service title</h2>
-            <img src="assets/img/service3.jpg" alt="service">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores aspernatur ea maxime sint incidunt totam tenetur excepturi ullam saepe temporibus?</p>
+            <img src="assets/img/service3.jpg" alt="service" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
+              aspernatur ea maxime sint incidunt totam tenetur excepturi ullam
+              saepe temporibus?
+            </p>
             <a href="">read more</a>
-
           </div>
         </div>
       </div>
     </div>
     <!-- service section end -->
+    <!-- gallery section star -->
+    <sectiion class="gallery-area">
+      <div class="container">
+        <div class="title">
+          <h2>gallery</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+            architecto perferendis necessitatibus asperiores ipsam. Quas
+            possimus culpa fugit illum veritatis consequuntur delectus, odio
+            quisquam soluta perferendis tempore ipsum libero vel.
+          </p>
+        </div>
+        <div class="gallery">
+          <div class="single-gallery">
+            <img src="assets/img/service1.jpg" alt="gallery" />
+          </div>
+          <div class="single-gallery">
+            <img src="assets/img/service2.jpg" alt="gallery" />
+          </div>
+          <div class="single-gallery">
+            <img src="assets/img/service3.jpg" alt="gallery" />
+          </div>
+          <div class="single-gallery">
+            <img src="assets/img/service2.jpg" alt="gallery" />
+          </div>
+          <div class="single-gallery">
+            <img src="assets/img/service3.jpg" alt="gallery" />
+          </div>
+          <div class="single-gallery">
+            <img src="assets/img/service1.jpg" alt="gallery" />
+          </div>
+          <div class="single-gallery">
+            <img src="assets/img/service3.jpg" alt="gallery" />
+          </div>
+          <div class="single-gallery">
+            <img src="assets/img/service3.jpg" alt="gallery" />
+          </div>
+        </div>
+      </div>
+    </sectiion>
+    <!-- gallery section end -->
+    <!-- contact section start -->
+    <section class="contact-area">
+      <div class="container">
+        <div class="title">
+          <h2>contact</h2>
+        </div>
+        <div class="contact">
+          <div class="contact-form">
+            <form>
+              <input type="text" placeholder="name" />
+              <input type="text" placeholder="subject" />
+              <input type="email" placeholder="email" />
+              <textarea placeholder="message"></textarea>
+              <input type="submit" value="send" />
+            </form>
+          </div>
+          <div class="contact-address">
+            <div class="single-addreaa">
+              <i class="fa-solid fa-location-dot"></i>
+              <h2>Address <span>Newyork, USA</span></h2>
+            </div>
+            <div class="single-addreaa">
+              <i class="fa-solid fa-envelope"></i>
+              <h2>Email <span>info@example.com</span></h2>
+            </div>
+            <div class="single-addreaa">
+              <i class="fa-solid fa-phone"></i>
+              <h2>Phone <span>+88 533 534 88</span></h2>
+            </div>
+            <div class="single-addreaa">
+              <i class="fa-solid fa-globe"></i>
+              <h2>Website <span>www.info.com</span></h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- contact section end -->
+    <!-- footer section start -->
+    <footer class="footer-area">
+      <p>&copy; all right reserved 2022</p>
+    </footer>
+    <!-- footer section end -->
   </body>
 </html>
